@@ -5,6 +5,7 @@ Changes since 2.0.0pre20:
 
 Modules/:
 * Removed meaningless repr() function from LDAPObject.c
+* Removed setting LDAP_OPT_PROTOCOL_VERSION in l_ldap_sasl_bind_s()
 
 ----------------------------------------------------------------
 Released 2.0.0pre20 2004-03-19
